# teslacam

./: .gitignore  README.md  archeryang-unknown-design-20260324-014241.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analytics_db.rs  analytics_engine.rs  commands.rs  db.rs  event_detection.rs  lib.rs  scanner.rs  sei.rs  telemetry_overlay.rs
src/components/: AnalyticsPage.css  AnalyticsPage.tsx  BirdEyeView.css  BirdEyeView.tsx  ErrorBoundary.tsx  InfoPanel.css  InfoPanel.tsx  MapPanel.css  MapPanel.tsx  Sidebar.css  Sidebar.tsx  SteeringWheel.css  SteeringWheel.tsx  TelemetryOverlay.css  TelemetryOverlay.tsx  Timeline.css  Timeline.tsx  VideoGrid.css  VideoGrid.tsx
src/hooks/: useTeslaCam.ts
src/styles/: app.css  global.css
src/types/: events.ts
