[package]
name = "teslacam-manager"
version = "0.1.0"
description = "TeslaCam Manager — 桌面版 Tesla 行車紀錄管理工具"
authors = ["archeryang"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
